<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background">


    <TextView
        android:id="@+id/title_tv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="15"
        android:gravity="center"
        android:text="Welcome to CYCLER ! :)"
        android:textColor="@color/colorWhite"
        android:textSize="22sp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="10">

        <AutoCompleteTextView
            android:shadowColor="@color/colorWhite"
            android:textColorLink="@color/colorBrightBlue"
            android:paddingStart="15dp"
            android:id="@+id/user_email_actv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail_hint"
            android:background="@color/colorAlmostWhite"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:imeActionId="6"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="@dimen/mainTitleSize"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorRed"
        android:layout_marginBottom="10dp"
        android:text="Create a password for your Cycler account"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="10">

        <AutoCompleteTextView
            android:id="@+id/user_password_actv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAlmostWhite"
            android:hint="@string/password_hint"
            android:imeActionId="6"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:shadowColor="@color/colorWhite"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorBrightBlue"
            android:textSize="@dimen/mainTitleSize" />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:id="@+id/password_again_actv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAlmostWhite"
            android:hint="@string/password_again_hint"
            android:imeActionId="6"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="15dp"
            android:shadowColor="@color/colorWhite"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textColorLink="@color/colorBrightBlue"
            android:textSize="@dimen/mainTitleSize" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2"
        android:paddingBottom="@dimen/subjectSize">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_registered"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/mediumFontSize" />

        <TextView
            android:id="@+id/login_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:paddingStart="@dimen/subjectSize"
            android:paddingEnd="@dimen/subjectSize"
            android:text="@string/login_here"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/titleFontSize"
            android:textStyle="bold" />

    </LinearLayout>


    <Button
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/subjectSize"
        android:layout_marginBottom="@dimen/subjectSize"
        android:padding="@dimen/start_end_margin"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorAlmostWhite"
        android:text="@string/register_now"
        android:textSize="@dimen/mediumFontSize"
        android:textColor="@color/colorWhite"/>


</LinearLayout>
