<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background">




    <TextView
        android:id="@+id/text_view"
        android:layout_weight="12"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="LOG IN"
        android:layout_margin="10dp"
        android:gravity="center"
        android:textSize="28sp"
        android:textColor="@color/colorWhite"
        android:textStyle="bold|italic"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="10">

        <AutoCompleteTextView
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:id="@+id/user_email_actv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail_hint"
            android:background="@color/colorAlmostWhite"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:imeActionId="6"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="@dimen/mainTitleSize"
            android:singleLine="true"
            tools:ignore="RtlSymmetry" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <AutoCompleteTextView
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:id="@+id/user_password_actv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAlmostWhite"
            android:hint="@string/password_hint"
            android:imeActionId="6"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textSize="@dimen/mainTitleSize"
            tools:ignore="RtlSymmetry" />

    </android.support.design.widget.TextInputLayout>





    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"

        android:layout_weight="10"
        android:orientation="horizontal"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:textAlignment="center"
            android:textSize="@dimen/regularFontSize"
            android:text="@string/dont_have_account"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginStart="15dp"
            android:textSize="@dimen/titleFontSize"
            android:text="@string/register_here"
            android:id="@+id/signup_tv"
            android:textColor="@color/colorWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"/>

    </LinearLayout>


    <Button
        android:id="@+id/log_in_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@color/colorLittleCircle"
        android:text="Log in"
        android:textStyle="bold"
        android:textSize="18sp"/>



</LinearLayout>
