<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Login progress -->
        <ProgressBar
            android:id="@+id/business_pb"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_email_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/subjectSize"
                android:layout_marginTop="15dp"
                android:text="Create your Cycler profile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/colorLittleCircle"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/place_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_name"
                android:inputType="text"/>



            <!--<android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/place_name_actv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place_name"
                    android:imeActionId="6"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>
-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/place_address_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:hint="@string/address"
                    android:inputType="text" />

               <!-- <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10">

                    <AutoCompleteTextView
                        android:id="@+id/place_address_actv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:imeActionId="6"
                        android:inputType="textPostalAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>-->

                <Button
                    android:id="@+id/choose_on_map_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:background="@color/colorGreen"
                    android:text="MAP"
                    android:textSize="@dimen/mediumFontSize"
                    android:textStyle="bold" />
            </LinearLayout>

            <EditText
                android:id="@+id/place_phone_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/place_phone"
                android:inputType="phone"/>

            <!--<android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/place_phone_actv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place_phone"
                    android:imeActionId="6"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>-->

            <!--<LinearLayout
                android:id="@+id/tag_ll"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <AutoCompleteTextView
                    android:id="@+id/tag_actv"
                    android:hint="@string/place_tags"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:id="@+id/tag_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_arrow_drop_down_black_24dp"

                    android:layout_gravity="center_vertical"/>


            </LinearLayout>-->


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/place_email_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place_mail_address"
                    android:inputType="textEmailAddress"/>

                <!--<AutoCompleteTextView
                    android:id="@+id/place_email_actv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/place_mail_address"
                    android:imeActionId="6"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />-->

                <Button
                    android:id="@+id/use_account_mail_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:text="Use account mail"
                    android:textSize="@dimen/regularFontSize"
                    android:textStyle="bold" />

            </android.support.design.widget.TextInputLayout>

            <!--<TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/big_mrgin"
                android:text="Want to tell us more?"
                android:textColor="@colo    r/colorBlack"
                android:textSize="@dimen/titleFontSize"/>
            <EditText
                android:id="@+id/more_details_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Write here"
                android:minLines="3"/>-->

            <Button
                android:id="@+id/choose_logo_img_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Choose your LOGO"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/logo_iv"
                android:layout_width="100dp"
                android:layout_height="100dp" />

            <Button
                android:id="@+id/create_place_btn"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Create My Business"
                android:textStyle="bold" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
